data/all_generated_tests/raw_wast_tests/br_StackCorruption_278.wast
;; 9. **Test Loop with Inputs and Outputs Management:**    - Create a `loop` that accepts multiple input operands and outputs several results. Use a `br` instruction to repeatedly jump to the start of the loop and verify operand consistency and type integrity after stack unwinding.

(assert_invalid
  (module
    (func $test-loop-input-output
      (loop (param i32 i32) (result i32)
        (br 0 (i32.add (local.get 0) (local.get 1)) (local.get 1))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)